--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>HiForceAdminUI</title>
@@ -7,7 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 </head>
+
 <body>
   <app-root></app-root>
+
+  <!-- js files needed -->
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <!-- custom js -->
+  <script src="./assets/js/sidebar.js"></script>
+  <script src="./assets/js/workspace.js"></script>
+  <script src="./assets/js/toggleHub.js"></script>
 </body>
+
 </html>
