reload woekspace compon on hub id change, disable mat tab and set def data while load, comment pdf js and fabric dist files

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
   <!-- pdfjs files from https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.2/filename -->
-  <link href="assets/pdfjs/pdf_viewer.css" rel="stylesheet">
+  <!-- <link href="assets/pdfjs/pdf_viewer.css" rel="stylesheet">
   <script src="assets/pdfjs/pdf.min.js"></script>
   <script src="assets/pdfjs/pdf_viewer.js"></script>
 
-  <script src="assets/js/fabric.min.js"></script>
+  <script src="assets/js/fabric.min.js"></script> -->
   <script type='text/javascript' src='https://documentcloud.adobe.com/view-sdk/main.js'></script>
 
   <!-- <script type="text/javascript" src="assets/leadtoolslibs/Leadtools.js"></script>
