Dev Prod Build,annotation data from api, set and listen all annotation events with annotation service,merge

--- a/HiForceAdminUI-dev/index.html
+++ b/HiForceAdminUI-dev/index.html
@@ -9,11 +9,11 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
   <!-- pdfjs files from https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.2/filename -->
-  <link href="assets/pdfjs/pdf_viewer.css" rel="stylesheet">
+  <!-- <link href="assets/pdfjs/pdf_viewer.css" rel="stylesheet">
   <script src="assets/pdfjs/pdf.min.js"></script>
   <script src="assets/pdfjs/pdf_viewer.js"></script>
 
-  <script src="assets/js/fabric.min.js"></script>
+  <script src="assets/js/fabric.min.js"></script> -->
   <script type='text/javascript' src='https://documentcloud.adobe.com/view-sdk/main.js'></script>
 
   <!-- <script type="text/javascript" src="assets/leadtoolslibs/Leadtools.js"></script>
@@ -25,13 +25,13 @@
   <script type="text/javascript" src="assets/leadtoolslibs/Leadtools.Document.js"></script>
   <script type="text/javascript" src="assets/leadtoolslibs/Leadtools.Document.Viewer.js"></script>
   <script src="assets/js/jquery.min"></script> -->
-<link rel="stylesheet" href="styles.efe078599d0936c838b0.css"></head>
+<link rel="stylesheet" href="styles.d12f6f5cdd5eb6da4659.css"></head>
 
 <body>
   <app-root>
     <div>Loading...</div>
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.d162a089e77ea22fde94.js" defer></script><script src="polyfills.4c65a62edf586f8d93cc.js" defer></script><script src="scripts.d4e17f39b58da5c756d0.js" defer></script><script src="main.28b23aa88f467e2409d7.js" defer></script></body>
+<script src="runtime.e72d21f9492cbe419942.js" defer></script><script src="polyfills.4c65a62edf586f8d93cc.js" defer></script><script src="scripts.d4e17f39b58da5c756d0.js" defer></script><script src="main.bde0a67a3cfe7ae15e49.js" defer></script></body>
 
 </html>
