--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>HiForceAdminUI</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
   <!-- pdfjs files from https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.2/filename -->
   <!-- <link href="assets/pdfjs/pdf_viewer.css" rel="stylesheet">
